<resources>
    <string name="app_name">Furniture eCommerce</string>

    <!--    User Dashboard-->
    <string name="user_dashboard_mainTitle">Thông tin người dùng</string>
    <string name="user_dashboard_orderTitle">Đơn hàng</string>
    <string name="user_dashboard_pendingOrder">Đơn chờ xác nhận</string>
    <string name="user_dashboard_onRouteOrder">Đơn đang giao hàng</string>
    <string name="user_dashboard_historyOrder">Lịch sử đặt hàng</string>
    <string name="user_dashboard_accountInfoTitle">Tài khoản</string>
    <string name="user_dashboard_accountSecurityInfo"><![CDATA[Tài khoản & Bảo mật]]></string>
    <string name="user_dashboard_addressInfo">Địa chỉ</string>
    <string name="user_dashboard_settingTitle">Cài đặt</string>
    <string name="user_dashboard_languageSetting">Ngôn ngữ</string>
    <string name="user_dashboard_notificationSetting">Thông báo</string>
    <string name="user_dashboard_logoutButton">Đăng xuất</string>
    <string name="user_dashboard_loginButton">Đăng nhập</string>
    <!--    Login-->
    <string name="login_title">Đăng nhập</string>
    <string name="login_usernameHint">Tài khoản</string>
    <string name="login_passwordHint">Mật khẩu</string>
    <string name="login_button">Đăng nhập</string>
    <string name="login_noAccount">Chưa có tài khoản?</string>
    <string name="login_register">Đăng kí</string>
    <!--    Chat bot-->
    <string name="hint_message">Nhập tin nhắn...</string>
    <string name="send_message">Gửi</string>
    <string name="chat_history">Lịch sử chat</string>
    <string name="no_history">Không có lịch sử chat</string>
    <string name="new_chat">Đoạn chat mới</string>
    <string name="delete_chat">Xóa đoạn chat</string>
    <string name="delete_chat_confirm">Bạn có chắc chắn muốn xóa đoạn chat này?</string>
    <string name="delete">Xóa</string>
    <string name="cancel">Hủy</string>
    <string name="deleted">Đã xóa đoạn chat</string>


</resources>