<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserDashboardActivity"
    android:padding="2dp">

    <TextView
        android:id="@+id/user_dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_dashboard_mainTitle"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--    User main info section-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_dashboard_userInfoSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_dashboard_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#20000000"
            android:elevation="10dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@id/user_dashboard_image"
            app:layout_constraintRight_toRightOf="@id/user_dashboard_image"
             />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user_dashboard_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="TODO"
            android:padding="2dp"
            android:src="@drawable/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <LinearLayout
            android:id="@+id/user_dashboard_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_dashboard_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="Username" />

        </LinearLayout>
<!--        User Not logged in view-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/user_dashboard_loginButton"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_logout_button"
            android:text="@string/user_dashboard_loginButton"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--        User Logged in view-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/user_dashboard_logoutButton"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_logout_button"
            android:text="@string/user_dashboard_logoutButton"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/user_dashboard_separator1"
        layout="@layout/common_big_separator_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_dashboard_userInfoSection"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        />
<!--    Order Info Section-->
    <LinearLayout
        android:id="@+id/user_dashboard_orderInfoSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_dashboard_separator1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_dashboard_orderTitle"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_dashboard_pendingOrder"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/ic_shipping_24px"
                android:background="?attr/selectableItemBackground"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/user_dashboard_onRouteOrder"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/ic_package_24px"
                android:background="?attr/selectableItemBackground"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/user_dashboard_historyOrder"
                android:textAlignment="center"
                app:drawableTopCompat="@drawable/ic_history_24px"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/user_dashboard_separator2"
        layout="@layout/common_big_separator_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_dashboard_orderInfoSection"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />
<!--    Account Info Section-->
    <LinearLayout
        android:id="@+id/user_dashboard_accountInfoSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_dashboard_separator2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_dashboard_accountInfoTitle"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_dashboard_accountAndSecuritySettingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_dashboard_accountSecurityInfo"
                app:drawableRightCompat="@drawable/ic_arrow_forward_24"
                android:paddingHorizontal="25dp"
                android:background="?attr/selectableItemBackground"/>

            <include
                android:id="@+id/user_dashboard_smallSeparator1"
                layout="@layout/common_small_separator_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@id/user_dashboard_accountAndSecuritySettingText"
                />

            <TextView
                android:id="@+id/user_dashboard_addressSettingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_dashboard_addressInfo"
                app:drawableRightCompat="@drawable/ic_arrow_forward_24"
                android:paddingHorizontal="25dp"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/user_dashboard_separator3"
        layout="@layout/common_big_separator_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_dashboard_accountInfoSection"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />
<!--    Setting Section-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_dashboard_separator3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_dashboard_settingTitle"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_dashboard_languageSettingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_dashboard_languageSetting"
                app:drawableRightCompat="@drawable/ic_arrow_forward_24"
                android:paddingHorizontal="25dp"/>

            <include
                android:id="@+id/user_dashboard_smallSeparator2"
                layout="@layout/common_small_separator_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/user_dashboard_languageSettingText"
                />

            <TextView
                android:id="@+id/user_dashboard_notificationSettingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_dashboard_notificationSetting"
                app:drawableRightCompat="@drawable/ic_arrow_forward_24"
                android:paddingHorizontal="25dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>