<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- App Icon -->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:contentDescription="App Icon"
            android:src="@drawable/ic_app_icon" />

        <!-- Log In Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Password -->
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login_input"
            android:hint="@string/login_usernameHint"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_login_input"
            android:hint="@string/login_passwordHint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="#888888" />

        <TextView
            android:id="@+id/tvInccorectInfo"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="* Tài khoản hoặc mật khẩu không đúng *"
            android:textColor="@color/red"
            android:paddingTop="5dp"/>

        <!-- Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_login_button_ripple"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <!-- Register link -->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_register"
            android:background="@drawable/bg_login_button_ripple"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingHorizontal="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Quên mật khẩu"
            android:background="@drawable/bg_logout_button_ripple"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>